--- a/Notas TeoPra/1. Cuantificadores.md
+++ b/Notas TeoPra/1. Cuantificadores.md
@@ -612,3 +612,233 @@ Si repetición importa → A5 falla.
 Si repetición no importa → A5 vale.
 
 ---
+
+
+
+# A6 — Distributividad
+
+$$
+\langle \,\oplus\, i : R.i : T.i \otimes C \rangle
+=
+\langle \,\oplus\, i : R.i : T.i \rangle  
+\,\otimes\, 
+C  
+$$
+
+### Hipótesis (todas importantes):
+
+- $i$ no aparece en $C$
+    
+- $\otimes$ distribuye sobre $\oplus$
+    
+- o bien $R$ es no vacío  
+    **o** el neutro de $\oplus$ es absorbente para $\otimes$
+    
+
+---
+
+## 1️⃣ Qué está diciendo realmente
+
+El cuantificador “saca afuera” un factor constante $C$.
+
+Esto es el análogo abstracto de:  
+$$ 
+\sum_i (f(i)\cdot c) = \left(\sum_i f(i)\right)\cdot c  
+$$
+
+Pero ojo: **no es una ley de cuantificadores**, es una ley **de interacción entre ⊕ y ⊗**.
+
+---
+
+## 2️⃣ Por qué la distributividad es esencial
+
+Si expandimos el lado izquierdo sobre un rango $i_1,\dots,i_n$:
+
+$$
+(T_{i_1}\otimes C) \oplus \dots \oplus (T_{i_n}\otimes C)  
+$$
+
+Para reagrupar como:
+
+$$ 
+(T_{i_1}\oplus \dots \oplus T_{i_n}) \otimes C  
+$$
+
+necesitamos exactamente:  
+
+$$
+(a\otimes c)\oplus(b\otimes c) = (a\oplus b)\otimes c  
+$$
+
+Sin esa ley, A6 es falsa.
+
+---
+
+## 3️⃣ El problema sutil del rango vacío
+
+Si $R$ es vacío, el lado izquierdo vale:  
+
+$$
+\langle \oplus i : False : T.i \otimes C \rangle = e_\oplus  
+$$
+
+El lado derecho vale:  
+$$  
+e_\oplus \otimes C  
+$$
+
+Para que coincidan, necesitamos:  
+$$
+e_\oplus \otimes C = e_\oplus  
+$$
+
+Eso es exactamente decir que **el neutro de ⊕ es absorbente para ⊗**.
+
+### Ejemplos
+
+- $∑$ y $×$:
+    
+    - neutro de $∑$ es $0$
+        
+    - $0 \times C = 0$ ✔️
+        
+- $∀$ y $∨$:
+    
+    - neutro de ∀ es True
+        
+    - $True \lor C \neq True$   
+        → por eso el digesto exige rango no vacío en ese caso
+        
+
+Chancho, este detalle suele pasar desapercibido y después nada cierra.
+
+---
+
+## 4️⃣ Ejemplos concretos
+
+### Suma
+
+$$
+\sum_{i\in R} (f(i)\cdot c) = \left(\sum_{i\in R} f(i)\right)\cdot c  
+$$
+
+✔️ distributividad  
+✔️ neutro absorbente  
+✔️ funciona incluso con rango vacío
+
+### Cuantificador universal
+
+$$
+\forall i\in R : (P(i)\lor Q)  
+\equiv  
+(\forall i\in R:P(i))\lor Q  
+$$
+
+⚠️ **solo si $R\neq\varnothing$**
+
+---
+
+# A7 — Anidado
+
+# [  
+\langle ;\oplus; i,j : R.i \land S.i.j : T.i.j \rangle
+
+\langle ;\oplus; i : R.i :  
+\langle ;\oplus; j : S.i.j : T.i.j \rangle  
+\rangle  
+]
+
+---
+
+## 1️⃣ Qué expresa conceptualmente
+
+Cuantificar sobre pares ((i,j)) es lo mismo que:
+
+1. fijar (i),
+    
+2. cuantificar sobre los (j) asociados,
+    
+3. luego cuantificar sobre (i).
+    
+
+Esto es la versión algebraica de **iterar en dos dimensiones**.
+
+---
+
+## 2️⃣ Por qué es válida
+
+El rango conjunto define el conjunto:  
+[  
+{(i,j) \mid R(i)\land S(i,j)}  
+]
+
+La igualdad dice simplemente que:
+
+> acumular sobre el producto condicionado  
+> es igual a acumular primero en (j) y luego en (i)
+
+Esto depende solo de:
+
+- asociatividad de ⊕,
+    
+- y de que el rango esté bien definido.
+    
+
+No hace falta idempotencia.
+
+---
+
+## 3️⃣ Ejemplos fundamentales
+
+### Suma doble
+
+# [  
+\sum_{i,j: R(i)\land S(i,j)} T(i,j)
+
+\sum_{i:R(i)}\left(\sum_{j:S(i,j)}T(i,j)\right)  
+]
+
+Es el principio básico de cualquier suma doble.
+
+### Universal anidado
+
+[  
+\forall i\in R ;\forall j\in S(i) : P(i,j)  
+]
+
+que no es más que notación compacta de A7.
+
+---
+
+## 4️⃣ Lo que A7 NO dice (muy importante)
+
+- No dice que puedas **intercambiar** (i) y (j) (eso es T2 o intercambio, con hipótesis).
+    
+- No dice que los cuantificadores tengan que ser iguales (acá sí lo son).
+    
+- No autoriza a cambiar el operador interno.
+    
+
+Es solo **asociación estructural**, no conmutación.
+
+---
+
+# Conclusión A6–A7
+
+Chancho, el edificio queda así:
+
+- **A6**: cómo interactúa el cuantificador con un operador externo
+    
+- **A7**: cómo se comporta al crecer en dimensiones
+    
+
+Errores típicos:
+
+- usar A6 sin chequear rango vacío,
+    
+- usar A6 con operadores que no distribuyen,
+    
+- confundir A7 con intercambio de cuantificadores.
+    
+
+Si querés, seguimos con **A8–A10**, donde entramos de lleno en ∀, ∃ y conteo, o podemos hacer un **ejercicio guiado** aplicando A6 y A7 para fijar ideas.
