--- a/Notas TeoPra/1. Cuantificadores A1 - A7.md
+++ b/Notas TeoPra/1. Cuantificadores A1 - A7.md
@@ -740,25 +740,25 @@ $$
 
 # A7 — Anidado
 
-# [  
-\langle ;\oplus; i,j : R.i \land S.i.j : T.i.j \rangle
-
-\langle ;\oplus; i : R.i :  
-\langle ;\oplus; j : S.i.j : T.i.j \rangle  
+$$ 
+\langle \,\oplus\, i,j : R.i \land S.i.j : T.i.j \rangle
+=
+\langle \,\oplus\, i : R.i :  
+\langle \,\oplus\, j : S.i.j : T.i.j \rangle  
 \rangle  
-]
+$$
 
 ---
 
 ## 1️⃣ Qué expresa conceptualmente
 
-Cuantificar sobre pares ((i,j)) es lo mismo que:
+Cuantificar sobre pares $(i,j)$ es lo mismo que:
 
-1. fijar (i),
+1. fijar $i$,
     
-2. cuantificar sobre los (j) asociados,
+2. cuantificar sobre los $j$ asociados,
     
-3. luego cuantificar sobre (i).
+3. luego cuantificar sobre $i$.
     
 
 Esto es la versión algebraica de **iterar en dos dimensiones**.
@@ -768,9 +768,9 @@ Esto es la versión algebraica de **iterar en dos dimensiones**.
 ## 2️⃣ Por qué es válida
 
 El rango conjunto define el conjunto:  
-[  
-{(i,j) \mid R(i)\land S(i,j)}  
-]
+$$
+\{(i,j) \mid R(i)\land S(i,j)\}  
+$$
 
 La igualdad dice simplemente que:
 
@@ -792,19 +792,19 @@ No hace falta idempotencia.
 
 ### Suma doble
 
-# [  
+$$
 \sum_{i,j: R(i)\land S(i,j)} T(i,j)
-
+=
 \sum_{i:R(i)}\left(\sum_{j:S(i,j)}T(i,j)\right)  
-]
+$$
 
 Es el principio básico de cualquier suma doble.
 
 ### Universal anidado
 
-[  
+$$
 \forall i\in R ;\forall j\in S(i) : P(i,j)  
-]
+$$
 
 que no es más que notación compacta de A7.
 
@@ -812,7 +812,7 @@ que no es más que notación compacta de A7.
 
 ## 4️⃣ Lo que A7 NO dice (muy importante)
 
-- No dice que puedas **intercambiar** (i) y (j) (eso es T2 o intercambio, con hipótesis).
+- No dice que puedas **intercambiar** $i$ y $j$ (eso es T2 o intercambio, con hipótesis).
     
 - No dice que los cuantificadores tengan que ser iguales (acá sí lo son).
     
@@ -840,5 +840,3 @@ Errores típicos:
     
 - confundir A7 con intercambio de cuantificadores.
     
-
-Si querés, seguimos con **A8–A10**, donde entramos de lleno en ∀, ∃ y conteo, o podemos hacer un **ejercicio guiado** aplicando A6 y A7 para fijar ideas.
